cargo-features = ["profile-rustflags"]

[package]
name = "crypto"
version = "0.0.4"
edition = "2021"

[dependencies]
wchar = "0.11"
winapi = { version = "0.3.7", features = ["consoleapi", "libloaderapi"] }
mimalloc = { version = "0.1.34" }

# Errors
thiserror = "1.0"
anyhow = "1.0.52"

# Utils
byteorder = "1.4.3"
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "std_rng"] }

# Encodings
base64 = "0.21.0"
hex = "0.4.3"

# Encryption
aes = "0.8.2"
ecb = { version = "0.1.1", features = ["std"] }
cbc = { version = "0.1.2", features = ["std"] }
ctr = { version = "0.9.2", features = ["std"] }
blowfish = "0.9.1"
rsa = "0.8.1"
arc4 = "0.1.0"

# Hashes
digest = "0.10.6"
sha2 = {version = "0.10.6", features = ["oid"]}
md-5 = {version = "0.10.5", features = ["oid"]}
md4 = {version = "0.10.2", features = ["oid"]}
sha-1 = {version = "0.10.1", features = ["oid"]}
sha3 = {version = "0.10.6", features = ["oid"]}
ripemd ={version = "0.1.3", features = ["oid"]}
hmac = {version = "0.12.1", features = ["std"]}

# KDFs
bcrypt = "0.13.0"
scrypt = "0.10.0"
pbkdf2 = {version = "0.11.0", features = ["simple", "sha1"]}

[dev-dependencies]
criterion = "0.3"
libloading = "0.7.2"
timeit = "0.1.2"

[[bench]]
name = "hash_benchmark"
harness = false

[lib]
crate-type = ["cdylib"]

[profile.dev]
rustflags = ["-C", "link-args=/DEBUG:NONE"]

[profile.release]
rustflags = ["-C", "link-args=/DEBUG:NONE"]

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
