cargo-features = ["profile-rustflags"]

[package]
name = "crypto"
version = "0.0.4"
edition = "2021"

[dependencies]
wchar = "0.11"
winapi = { version = "0.3", features = ["consoleapi", "libloaderapi"] }
mimalloc = { version = "0.1" }

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Utils
byteorder = "1.4"
rand = { version = "0.8", default-features = false, features = ["small_rng", "std_rng"] }

# Encodings
base64 = "0.21"
hex = "0.4"

# Encryption
aes = "0.8"
ecb = { version = "0.1", features = ["std"] }
cbc = { version = "0.1", features = ["std"] }
ctr = { version = "0.9", features = ["std"] }
blowfish = "0.9"
rsa = "0.8"
arc4 = "0.1"

# Hashes
digest = "0.10"
sha2 = {version = "0.10", features = ["oid"]}
md-5 = {version = "0.10", features = ["oid"]}
md4 = {version = "0.10", features = ["oid"]}
sha-1 = {version = "0.10", features = ["oid"]}
sha3 = {version = "0.10", features = ["oid"]}
ripemd ={version = "0.1", features = ["oid"]}
hmac = {version = "0.12", features = ["std"]}

# KDFs
bcrypt = "0.14"
scrypt = "0.10"
pbkdf2 = {version = "0.11.0", features = ["simple", "sha1"]}
evpkdf = {git = "https://github.com/Numenorean/evpkdf"}

[dev-dependencies]
criterion = "0.3"
libloading = "0.7"
timeit = "0.1"
hex-literal = "0.3"

[[bench]]
name = "hash_benchmark"
harness = false

[lib]
crate-type = ["cdylib"]

[profile.dev]
rustflags = ["-C", "link-args=/DEBUG:NONE"]

[profile.release]
rustflags = ["-C", "link-args=/DEBUG:NONE"]

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
