[package]
name = "random"
version = "0.0.1"
edition = "2021"

[dependencies]
wchar = "^0.11"
winapi = { version = "^0.3.7", features = ["consoleapi", "libloaderapi"] }
libc = "^0.2.107"
serde_json = "^1.0.72"
rand = "^0.8.4"
uuid = { version = "^0.8.2", features = ["v4"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = 'abort'