[package]
name = "random"
version = "0.0.1"
edition = "2021"

[dependencies]
wchar = "^0.11"
winapi = { version = "^0.3.7", features = ["consoleapi", "libloaderapi"] }
libc = "^0.2.107"
mimalloc = { version = "0.1.17" }
serde_json = "^1.0.72"
rand = "^0.8.4"
uuid = { version = "^0.8.2", features = ["v4"] }
rand_regex = "0.15.1"
regex-syntax = "0.6.25"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'