[package]
name = "svg"
version = "0.0.1"
edition = "2021"

[dependencies]
wchar = "0.11"
winapi = { version = "0.3.7", features = ["consoleapi", "libloaderapi"] }
mimalloc = { version = "0.1.17" }
base64 = "0.13.0"
resvg = "0.20.0"
usvg = "0.20.0"
tiny-skia = "0.6.2"
lazy_static = "1.4.0"
png = "0.17.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'