[package]
name = "tcp"
version = "0.0.1"
edition = "2021"

[dependencies]
wchar = "0.11"
winapi = { version = "0.3.7", features = ["consoleapi", "libloaderapi"] }
libc = "0.2.121"
base64 = "0.13.0"
mimalloc = { version = "0.1.28" }
socks = {git = "https://github.com/Numenorean/rust-socks"}
lazy_static = "1.4.0"
uuid = {version = "0.8.2", features = ["v4"]}
thiserror = "1.0.30"
thread-control = "0.1.2"
native-tls = "0.2.8"
once_cell = "1.10.0"
gag = "1.0.0"
#stretto = "0.3.3"
#fxhash = "0.2.1"
#rayon = "1.5.1"
#crossbeam-channel = "0.5.4"
futures-cpupool = "0.1.8"
futures = "0.1.31"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
#panic = 'abort'
